Sync all content

--- a/content/resources/n2.md
+++ b/content/resources/n2.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Complexity Theory and Game Tree Evaluation.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/adc9c87dfb82db1a291fbea88e11c247_n2.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/adc9c87dfb82db1a291fbea88e11c247_n2.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n2.pdf
 uid: adc9c87d-fb82-db1a-291f-bea88e11c247
