--- a/content/resources/n25.md
+++ b/content/resources/n25.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Lecture notes on Randomized Incremental Construction Trapezoidal Decomposition,
   Treaps and Search Structure
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/0c8679001f9a61c28512d4aee64fa5ea_n25.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/0c8679001f9a61c28512d4aee64fa5ea_n25.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n25.pdf
 uid: 0c867900-1f9a-61c2-8512-d4aee64fa5ea
