--- a/content/resources/hw10.md
+++ b/content/resources/hw10.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/d028d3be503f7d922e64f738e85701a0_hw10.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/d028d3be503f7d922e64f738e85701a0_hw10.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: hw10.pdf
 uid: d028d3be-503f-7d92-2e64-f738e85701a0
