--- a/content/resources/hw11.md
+++ b/content/resources/hw11.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'Contains problems from the book "Motwani, Rajeez, and Prabhakar Raghavan.
   Randomized Algorithms. Cambridge: Cambridge University Press,1995."'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/675254c5765782c7a93874a46429bd9e_hw11.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/675254c5765782c7a93874a46429bd9e_hw11.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: hw11.pdf
 uid: 675254c5-7657-82c7-a938-74a46429bd9e
