--- a/content/resources/hw12.md
+++ b/content/resources/hw12.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'Contains problems from the book "Motwani, Rajeez, and Prabhakar Raghavan.
   Randomized Algorithms. Cambridge: Cambridge University Press,1995."'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/fe5441ddec03c6f952f5e6b72049a319_hw12.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/fe5441ddec03c6f952f5e6b72049a319_hw12.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: hw12.pdf
 uid: fe5441dd-ec03-c6f9-52f5-e6b72049a319
