--- a/content/resources/n10.md
+++ b/content/resources/n10.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Lecture notes on Fingerprints by Polynomials, Perfect Matching, Hashing
   and  Treaps
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/3b0b8e79c6dd4381ed65ab37f7076165_n10.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/3b0b8e79c6dd4381ed65ab37f7076165_n10.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n10.pdf
 uid: 3b0b8e79-c6dd-4381-ed65-ab37f7076165
