--- a/content/resources/n12.md
+++ b/content/resources/n12.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Lecture notes on Parallel algorithms, Sorting, Perfect Match and Maximum
   Independent Set
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/84104442bfff61d902175ac926fd4602_n12.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/84104442bfff61d902175ac926fd4602_n12.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n12.pdf
 uid: 84104442-bfff-61d9-0217-5ac926fd4602
