--- a/content/resources/n13.md
+++ b/content/resources/n13.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Maximal Independent Sets, MST, Minimum Cut
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/67aac733b35b863a45760d1da032085e_n13.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/67aac733b35b863a45760d1da032085e_n13.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n13.pdf
 uid: 67aac733-b35b-863a-4576-0d1da032085e
