--- a/content/resources/n14.md
+++ b/content/resources/n14.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Minimum Spanning Trees.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/e1ba05634f0e001b87d3fc2d1a9bf3d0_n14.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/e1ba05634f0e001b87d3fc2d1a9bf3d0_n14.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n14.pdf
 uid: e1ba0563-4f0e-001b-87d3-fc2d1a9bf3d0
