--- a/content/resources/n15.md
+++ b/content/resources/n15.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Polling, Minimum Cut and Transitive Closure
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/79be35563c0b9301b79e35c706d804a6_n15.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/79be35563c0b9301b79e35c706d804a6_n15.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n15.pdf
 uid: 79be3556-3c0b-9301-b79e-35c706d804a6
