--- a/content/resources/n16.md
+++ b/content/resources/n16.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Estimating Minimum Cut
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/9574854454cd2a752a247b6f3dc0650d_n16.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/9574854454cd2a752a247b6f3dc0650d_n16.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n16.pdf
 uid: 95748544-54cd-2a75-2a24-7b6f3dc0650d
