--- a/content/resources/n18.md
+++ b/content/resources/n18.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Lecture notes on Linear Programming, Iterative Reweighting, DNF Counting
   and Network Reliability
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/867ec3fa45c9d6d6fb65b2c9dfcf9cc1_n18.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/867ec3fa45c9d6d6fb65b2c9dfcf9cc1_n18.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n18.pdf
 uid: 867ec3fa-45c9-d6d6-fb65-b2c9dfcf9cc1
