--- a/content/resources/n19.md
+++ b/content/resources/n19.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Markov Chains and Random Walks on Undirected Paths,
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/f82336339d060657c67771a33452d36f_n19.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/f82336339d060657c67771a33452d36f_n19.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n19.pdf
 uid: f8233633-9d06-0657-c677-71a33452d36f
