--- a/content/resources/n21.md
+++ b/content/resources/n21.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Expanders and Conserving Randomness.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/8298e55736a031b936da674a32b2d748_n21.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/8298e55736a031b936da674a32b2d748_n21.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n21.pdf
 uid: 8298e557-36a0-31b9-36da-674a32b2d748
