--- a/content/resources/n22.md
+++ b/content/resources/n22.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Sampling with Markov Chains and Coupling.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/fcc85df292b62ed5071fe6a857cb318b_n22.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/fcc85df292b62ed5071fe6a857cb318b_n22.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n22.pdf
 uid: fcc85df2-92b6-2ed5-071f-e6a857cb318b
