--- a/content/resources/n3.md
+++ b/content/resources/n3.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Yao's Minimax Principle and Adelman's Theorem.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/e6cd56bb54a44a8a138490daa2ff48ba_n3.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/e6cd56bb54a44a8a138490daa2ff48ba_n3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n3.pdf
 uid: e6cd56bb-54a4-4a8a-1384-90daa2ff48ba
