--- a/content/resources/n4.md
+++ b/content/resources/n4.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: Lecture notes containing Coupon collecting, Stable Marriage, Deviation
   from Expectation and Tail Bounds-Markov inequality
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/2e00cd3ccdd9e9e9aa3f4b8305a6abef_n4.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/2e00cd3ccdd9e9e9aa3f4b8305a6abef_n4.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n4.pdf
 uid: 2e00cd3c-cdd9-e9e9-aa3f-4b8305a6abef
