--- a/content/resources/n5.md
+++ b/content/resources/n5.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Chebyshev, Chernoff Bound, Median Finding and Routing.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/50050d7f144bc798f479c2a411b18eae_n5.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/50050d7f144bc798f479c2a411b18eae_n5.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n5.pdf
 uid: 50050d7f-144b-c798-f479-c2a411b18eae
