--- a/content/resources/n6.md
+++ b/content/resources/n6.md
@@ -3,8 +3,13 @@ content_type: resource
 description: Lecture notes on Routing, The Probabilistic Method - Value Of Random
   Answers, Expanders, Wiring and MAX SAT. These Topics have also been covered in lecture
   number 7.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/59d8268c8f271c4bc7c5302f797fd6bd_n6.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/59d8268c8f271c4bc7c5302f797fd6bd_n6.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n6.pdf
 uid: 59d8268c-8f27-1c4b-c7c5-302f797fd6bd
