--- a/content/resources/n8.md
+++ b/content/resources/n8.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: Lecture notes on Pessimistic Estimators and Pairwise Independence.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/6-856j-randomized-algorithms-fall-2002/fdc2b5ff8b58dd43a2c77b10278249c2_n8.pdf
+file: /media/courses/6-856j-randomized-algorithms-fall-2002/fdc2b5ff8b58dd43a2c77b10278249c2_n8.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: n8.pdf
 uid: fdc2b5ff-8b58-dd43-a2c7-7b10278249c2
