Sync all content

--- a/content/resources/hw11.md
+++ b/content/resources/hw11.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 372d9d6e-7fbf-5010-8feb-41f111353735
 resourcetype: Document
 title: hw11.pdf
 uid: 675254c5-7657-82c7-a938-74a46429bd9e
