--- a/content/resources/hw13.md
+++ b/content/resources/hw13.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 372d9d6e-7fbf-5010-8feb-41f111353735
 resourcetype: Document
 title: hw13.pdf
 uid: f7b06172-c13e-8ba4-4ca3-035b566d40fa
