--- a/content/resources/hw10.md
+++ b/content/resources/hw10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 372d9d6e-7fbf-5010-8feb-41f111353735
 resourcetype: Document
 title: hw10.pdf
 uid: d028d3be-503f-7d92-2e64-f738e85701a0
