--- a/content/resources/hw12.md
+++ b/content/resources/hw12.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 372d9d6e-7fbf-5010-8feb-41f111353735
 resourcetype: Document
 title: hw12.pdf
 uid: fe5441dd-ec03-c6f9-52f5-e6b72049a319
