--- a/content/resources/n1.md
+++ b/content/resources/n1.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n1.pdf
 uid: 2b92be49-ad6b-bf6b-75da-5d5c262a27f1
