--- a/content/resources/n10.md
+++ b/content/resources/n10.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n10.pdf
 uid: 3b0b8e79-c6dd-4381-ed65-ab37f7076165
