--- a/content/resources/n11.md
+++ b/content/resources/n11.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n11.pdf
 uid: 92288609-2657-d1c3-fb9d-b7b12fbb76cd
