--- a/content/resources/n12.md
+++ b/content/resources/n12.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n12.pdf
 uid: 84104442-bfff-61d9-0217-5ac926fd4602
