--- a/content/resources/n13.md
+++ b/content/resources/n13.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n13.pdf
 uid: 67aac733-b35b-863a-4576-0d1da032085e
