--- a/content/resources/n14.md
+++ b/content/resources/n14.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n14.pdf
 uid: e1ba0563-4f0e-001b-87d3-fc2d1a9bf3d0
