--- a/content/resources/n15.md
+++ b/content/resources/n15.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n15.pdf
 uid: 79be3556-3c0b-9301-b79e-35c706d804a6
