--- a/content/resources/n17.md
+++ b/content/resources/n17.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n17.pdf
 uid: 1b194e43-4c15-5c16-43e6-f3271dd0c963
