--- a/content/resources/n18.md
+++ b/content/resources/n18.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n18.pdf
 uid: 867ec3fa-45c9-d6d6-fb65-b2c9dfcf9cc1
