--- a/content/resources/n19.md
+++ b/content/resources/n19.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n19.pdf
 uid: f8233633-9d06-0657-c677-71a33452d36f
