--- a/content/resources/n2.md
+++ b/content/resources/n2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n2.pdf
 uid: adc9c87d-fb82-db1a-291f-bea88e11c247
