--- a/content/resources/n20.md
+++ b/content/resources/n20.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n20.pdf
 uid: 5c150866-940b-d4a8-bb3d-eb478b666d4a
