--- a/content/resources/n24.md
+++ b/content/resources/n24.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n24.pdf
 uid: a2472e45-aa94-e076-bec5-f1e2a0668fac
