--- a/content/resources/n25.md
+++ b/content/resources/n25.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n25.pdf
 uid: 0c867900-1f9a-61c2-8512-d4aee64fa5ea
