--- a/content/resources/n3.md
+++ b/content/resources/n3.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n3.pdf
 uid: e6cd56bb-54a4-4a8a-1384-90daa2ff48ba
