--- a/content/resources/n4.md
+++ b/content/resources/n4.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n4.pdf
 uid: 2e00cd3c-cdd9-e9e9-aa3f-4b8305a6abef
