--- a/content/resources/n5.md
+++ b/content/resources/n5.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n5.pdf
 uid: 50050d7f-144b-c798-f479-c2a411b18eae
