--- a/content/resources/n6.md
+++ b/content/resources/n6.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n6.pdf
 uid: 59d8268c-8f27-1c4b-c7c5-302f797fd6bd
