--- a/content/resources/n7.md
+++ b/content/resources/n7.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n7.pdf
 uid: d7ac78b6-4491-4c69-f687-f6c6fde3273f
