--- a/content/resources/n8.md
+++ b/content/resources/n8.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n8.pdf
 uid: fdc2b5ff-8b58-dd43-a2c7-7b10278249c2
