--- a/content/resources/n9.md
+++ b/content/resources/n9.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 8d3bdf99-82fb-17ae-11d8-85e1d32b7611
 resourcetype: Document
 title: n9.pdf
 uid: 81873614-e9b3-632f-c8f3-7e3997470dcd
