Sync all content

--- a/content/resources/6-856jf02-th.md
+++ b/content/resources/6-856jf02-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/b23324cf3c7e7389e4c283ce874637f9_6-856jf02-th.jpg
+file: /courses/6-856j-randomized-algorithms-fall-2002/b23324cf3c7e7389e4c283ce874637f9_6-856jf02-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Partitioning algorithms are used to solve complex large scale computational
@@ -10,8 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Unstructured grid for a four element airfoil.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-856jf02-th.jpg
 uid: b23324cf-3c7e-7389-e4c2-83ce874637f9
 ---
+New image Upload
