--- a/content/resources/n1.md
+++ b/content/resources/n1.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes containing Quick Sort, BSP and MinCut
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/2b92be49ad6bbf6b75da5d5c262a27f1_n1.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/2b92be49ad6bbf6b75da5d5c262a27f1_n1.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n1.pdf
 uid: 2b92be49-ad6b-bf6b-75da-5d5c262a27f1
 ---
+Lecture notes containing Quick Sort, BSP and MinCut
