--- a/content/resources/n20.md
+++ b/content/resources/n20.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: Lecture notes on UTS, Markov Chains for Sampling, Eigenvalue Analysis
   and Expanders.
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/5c150866940bd4a8bb3deb478b666d4a_n20.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/5c150866940bd4a8bb3deb478b666d4a_n20.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: n20.pdf
 uid: 5c150866-940b-d4a8-bb3d-eb478b666d4a
 ---
+Lecture notes on UTS, Markov Chains for Sampling, Eigenvalue Analysis and Expanders.
