--- a/content/resources/6-856jf02.md
+++ b/content/resources/6-856jf02.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/da6d1b9b62c59cd9691c0bb342f4416a_6-856jf02.jpg
+file: /courses/6-856j-randomized-algorithms-fall-2002/da6d1b9b62c59cd9691c0bb342f4416a_6-856jf02.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Partitioning algorithms are used to solve complex large scale computational
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Unstructured grid for a four element airfoil.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 6-856jf02.jpg
