--- a/content/resources/hw10.md
+++ b/content/resources/hw10.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/d028d3be503f7d922e64f738e85701a0_hw10.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/d028d3be503f7d922e64f738e85701a0_hw10.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
