--- a/content/resources/hw12.md
+++ b/content/resources/hw12.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: 'Contains problems from the book "Motwani, Rajeez, and Prabhakar Raghavan.
   Randomized Algorithms. Cambridge: Cambridge University Press,1995."'
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/fe5441ddec03c6f952f5e6b72049a319_hw12.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/fe5441ddec03c6f952f5e6b72049a319_hw12.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: hw12.pdf
 uid: fe5441dd-ec03-c6f9-52f5-e6b72049a319
 ---
+Contains problems from the book "Motwani, Rajeez, and Prabhakar Raghavan. Randomized Algorithms. Cambridge: Cambridge University Press,1995."
