--- a/content/resources/hw13.md
+++ b/content/resources/hw13.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: ''
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/f7b06172c13e8ba44ca3035b566d40fa_hw13.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/f7b06172c13e8ba44ca3035b566d40fa_hw13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
