--- a/content/resources/n11.md
+++ b/content/resources/n11.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: Lecture notes on Shortest Paths, Parallel Algorithms, Sorting and Perfect
   Match
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/922886092657d1c3fb9db7b12fbb76cd_n11.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/922886092657d1c3fb9db7b12fbb76cd_n11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: n11.pdf
 uid: 92288609-2657-d1c3-fb9d-b7b12fbb76cd
 ---
+Lecture notes on Shortest Paths, Parallel Algorithms, Sorting and Perfect Match
