--- a/content/resources/n13.md
+++ b/content/resources/n13.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Maximal Independent Sets, MST, Minimum Cut
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/67aac733b35b863a45760d1da032085e_n13.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/67aac733b35b863a45760d1da032085e_n13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n13.pdf
 uid: 67aac733-b35b-863a-4576-0d1da032085e
 ---
+Lecture notes on Maximal Independent Sets, MST, Minimum Cut
