--- a/content/resources/n14.md
+++ b/content/resources/n14.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Minimum Spanning Trees.
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/e1ba05634f0e001b87d3fc2d1a9bf3d0_n14.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/e1ba05634f0e001b87d3fc2d1a9bf3d0_n14.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n14.pdf
 uid: e1ba0563-4f0e-001b-87d3-fc2d1a9bf3d0
 ---
+Lecture notes on Minimum Spanning Trees.
