--- a/content/resources/n15.md
+++ b/content/resources/n15.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Polling, Minimum Cut and Transitive Closure
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/79be35563c0b9301b79e35c706d804a6_n15.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/79be35563c0b9301b79e35c706d804a6_n15.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n15.pdf
 uid: 79be3556-3c0b-9301-b79e-35c706d804a6
 ---
+Lecture notes on Polling, Minimum Cut and Transitive Closure
