--- a/content/resources/n16.md
+++ b/content/resources/n16.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Estimating Minimum Cut
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/9574854454cd2a752a247b6f3dc0650d_n16.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/9574854454cd2a752a247b6f3dc0650d_n16.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n16.pdf
 uid: 95748544-54cd-2a75-2a24-7b6f3dc0650d
 ---
+Lecture notes on Estimating Minimum Cut
