--- a/content/resources/n17.md
+++ b/content/resources/n17.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Iterative Reweighting, Linear Programming and DNF Counting
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/1b194e434c155c1643e6f3271dd0c963_n17.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/1b194e434c155c1643e6f3271dd0c963_n17.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n17.pdf
 uid: 1b194e43-4c15-5c16-43e6-f3271dd0c963
 ---
+Lecture notes on Iterative Reweighting, Linear Programming and DNF Counting
