--- a/content/resources/n19.md
+++ b/content/resources/n19.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Markov Chains and Random Walks on Undirected Paths,
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/f82336339d060657c67771a33452d36f_n19.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/f82336339d060657c67771a33452d36f_n19.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n19.pdf
 uid: f8233633-9d06-0657-c677-71a33452d36f
 ---
+Lecture notes on Markov Chains and Random Walks on Undirected Paths,
