--- a/content/resources/n22.md
+++ b/content/resources/n22.md
@@ -1,10 +1,11 @@
 ---
 content_type: resource
 description: Lecture notes on Sampling with Markov Chains and Coupling.
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/fcc85df292b62ed5071fe6a857cb318b_n22.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/fcc85df292b62ed5071fe6a857cb318b_n22.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -13,3 +14,4 @@ resourcetype: Document
 title: n22.pdf
 uid: fcc85df2-92b6-2ed5-071f-e6a857cb318b
 ---
+Lecture notes on Sampling with Markov Chains and Coupling.
