--- a/content/resources/n24.md
+++ b/content/resources/n24.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: Lecture notes on Randomized Incremental Consturction, Randomized Incremental
   Sorting, Convex Hull and Linear Programming
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/a2472e45aa94e076bec5f1e2a0668fac_n24.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/a2472e45aa94e076bec5f1e2a0668fac_n24.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: n24.pdf
 uid: a2472e45-aa94-e076-bec5-f1e2a0668fac
 ---
+Lecture notes on Randomized Incremental Consturction, Randomized Incremental Sorting, Convex Hull and Linear Programming
