--- a/content/resources/n7.md
+++ b/content/resources/n7.md
@@ -3,10 +3,11 @@ content_type: resource
 description: Lecture notes on The Probabilistic Method for Expectations, Wiring, MAX
   SAT, Methods of Conditional Probability and Expectations, Pessimistic Estimators
   and Oblivious Routing.
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/d7ac78b644914c69f687f6c6fde3273f_n7.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/d7ac78b644914c69f687f6c6fde3273f_n7.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,3 +16,4 @@ resourcetype: Document
 title: n7.pdf
 uid: d7ac78b6-4491-4c69-f687-f6c6fde3273f
 ---
+Lecture notes on The Probabilistic Method for Expectations, Wiring, MAX SAT, Methods of Conditional Probability and Expectations, Pessimistic Estimators and Oblivious Routing.
