--- a/content/resources/n9.md
+++ b/content/resources/n9.md
@@ -2,10 +2,11 @@
 content_type: resource
 description: Lecture notes on Hashing, Perfect Hash Families, String Matching, Fingerprints
   by Polynomials and Perfect Matching.
-file: /media/courses/6-856j-randomized-algorithms-fall-2002/81873614e9b3632fc8f37e3997470dcd_n9.pdf
+file: /courses/6-856j-randomized-algorithms-fall-2002/81873614e9b3632fc8f37e3997470dcd_n9.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,3 +15,4 @@ resourcetype: Document
 title: n9.pdf
 uid: 81873614-e9b3-632f-c8f3-7e3997470dcd
 ---
+Lecture notes on Hashing, Perfect Hash Families, String Matching, Fingerprints by Polynomials and Perfect Matching.
