Sync all content

--- a/content/resources/hw12.md
+++ b/content/resources/hw12.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'Contains problems from the book "Motwani, Rajeez, and Prabhakar Raghavan.
   Randomized Algorithms. Cambridge: Cambridge University Press,1995."'
 file: /courses/6-856j-randomized-algorithms-fall-2002/fe5441ddec03c6f952f5e6b72049a319_hw12.pdf
+file_size: 200580
 file_type: application/pdf
 learning_resource_types:
 - Assignments
