--- a/content/resources/n20.md
+++ b/content/resources/n20.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on UTS, Markov Chains for Sampling, Eigenvalue Analysis
   and Expanders.
 file: /courses/6-856j-randomized-algorithms-fall-2002/5c150866940bd4a8bb3deb478b666d4a_n20.pdf
+file_size: 109177
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
