--- a/content/resources/n6.md
+++ b/content/resources/n6.md
@@ -4,6 +4,7 @@ description: Lecture notes on Routing, The Probabilistic Method - Value Of Rando
   Answers, Expanders, Wiring and MAX SAT. These Topics have also been covered in lecture
   number 7.
 file: /courses/6-856j-randomized-algorithms-fall-2002/59d8268c8f271c4bc7c5302f797fd6bd_n6.pdf
+file_size: 145172
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
