--- a/content/resources/n8.md
+++ b/content/resources/n8.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Lecture notes on Pessimistic Estimators and Pairwise Independence.
 file: /courses/6-856j-randomized-algorithms-fall-2002/fdc2b5ff8b58dd43a2c77b10278249c2_n8.pdf
+file_size: 77146
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
