--- a/content/resources/6-856jf02-th.md
+++ b/content/resources/6-856jf02-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/6-856j-randomized-algorithms-fall-2002/b23324cf3c7e7389e4c283ce874637f9_6-856jf02-th.jpg
+file_size: 8163
 file_type: image/jpeg
 image_metadata:
   caption: 'Partitioning algorithms are used to solve complex large scale computational
