--- a/content/resources/6-856jf02.md
+++ b/content/resources/6-856jf02.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/6-856j-randomized-algorithms-fall-2002/da6d1b9b62c59cd9691c0bb342f4416a_6-856jf02.jpg
+file_size: 120244
 file_type: image/jpeg
 image_metadata:
   caption: 'Partitioning algorithms are used to solve complex large scale computational
