--- a/content/resources/hw13.md
+++ b/content/resources/hw13.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/6-856j-randomized-algorithms-fall-2002/f7b06172c13e8ba44ca3035b566d40fa_hw13.pdf
+file_size: 62163
 file_type: application/pdf
 learning_resource_types:
 - Assignments
