--- a/content/resources/n13.md
+++ b/content/resources/n13.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Lecture notes on Maximal Independent Sets, MST, Minimum Cut
 file: /courses/6-856j-randomized-algorithms-fall-2002/67aac733b35b863a45760d1da032085e_n13.pdf
+file_size: 122233
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
