--- a/content/resources/n18.md
+++ b/content/resources/n18.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Lecture notes on Linear Programming, Iterative Reweighting, DNF Counting
   and Network Reliability
 file: /courses/6-856j-randomized-algorithms-fall-2002/867ec3fa45c9d6d6fb65b2c9dfcf9cc1_n18.pdf
+file_size: 85607
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
