--- a/content/resources/n2.md
+++ b/content/resources/n2.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Lecture notes on Complexity Theory and Game Tree Evaluation.
 file: /courses/6-856j-randomized-algorithms-fall-2002/adc9c87dfb82db1a291fbea88e11c247_n2.pdf
+file_size: 89857
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
