--- a/content/resources/n5.md
+++ b/content/resources/n5.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: Lecture notes on Chebyshev, Chernoff Bound, Median Finding and Routing.
 file: /courses/6-856j-randomized-algorithms-fall-2002/50050d7f144bc798f479c2a411b18eae_n5.pdf
+file_size: 135709
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
