--- a/content/resources/n7.md
+++ b/content/resources/n7.md
@@ -4,6 +4,7 @@ description: Lecture notes on The Probabilistic Method for Expectations, Wiring,
   SAT, Methods of Conditional Probability and Expectations, Pessimistic Estimators
   and Oblivious Routing.
 file: /courses/6-856j-randomized-algorithms-fall-2002/d7ac78b644914c69f687f6c6fde3273f_n7.pdf
+file_size: 124791
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
