Sync all content

--- a/content/resources/6-856jf02-th.md
+++ b/content/resources/6-856jf02-th.md
@@ -7,7 +7,8 @@ file_type: image/jpeg
 image_metadata:
   caption: 'Partitioning algorithms are used to solve complex large scale computational
     problems, as shown in this unstructured grid for a four element airfoil. (Image
-    is taken from NASA''s Web site: [http://www.nasa.gov](http://www.nasa.gov).)'
+    is taken from NASA''s Web site: {{% resource_link "404e6dfb-546d-4de6-b89a-72effaf31691"
+    "http://www.nasa.gov" %}}.)'
   credit: ''
   image-alt: Unstructured grid for a four element airfoil.
 learning_resource_types: []
